update admin role for user
